<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#EAE4D4"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:text="@string/enter_weight_tv"
                android:textColor="#221800"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/kg_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#81D1C7AE"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/wt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#65CDBA8D"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/enter_weight"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="#454545"
                    android:textColorHighlight="#7692E8"
                    android:textColorHint="#455A64"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:text="@string/enter_height"
                android:textColor="#FF221800"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ht_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#5ED1C7AE"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#65CDBA8D"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/enter_height_in_mts"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textColor="#454545"
                    android:textColorHighlight="#7692E8"
                    android:textColorHint="#455A64"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/ht2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#65CDBA8D"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/enter_inches"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textColor="#454545"
                    android:textColorHighlight="#7692E8"
                    android:textColorHint="#455A64"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <Button
                android:id="@+id/calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textColor="#E5EBFF"
                android:textColorHighlight="#98AFF4" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/bmi"
                android:textColor="#454545"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/category"
                android:textColor="#454545"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/Note"
            android:textColor="#756F5F"
            android:textSize="11sp"
            tools:ignore="VisualLintLongText,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#3957B6"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="BMI Calculator"
            android:textColor="#E9E3D3"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,InefficientWeight" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>